# ical

./: .dockerignore  Dockerfile  app.py  app.yaml  cache.py  gcal.py  logger.py  main.py  pyproject.toml  requirements.txt  yasno.py
.github/workflows/: lint.yml
app/: __main__.py  gcal.py  main.py
app/providers/: __init__.py  dtek.py  yasno.py
app/templates/: index.html
providers/: __init__.py  dtek.py  yasno.py
templates/: index.html
