[project]
name = "yasno-outages-ical"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "flask-apscheduler>=1.13.1",
    "flask-caching>=2.3.1",
    "gunicorn>=23.0.0",
    "icalendar>=6.3.2",
    "playwright>=1.57.0",
    "pydantic>=2.12.5",
    "redis>=7.1.0",
    "requests>=2.32.5",
]
