[project]
name = "yasno-outages-ical"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "aiocache>=0.12.3",
    "aiohttp>=3.13.2",
    "hypercorn>=0.18.0",
    "icalendar>=6.3.2",
    "playwright>=1.57.0",
    "pydantic>=2.12.5",
    "quart>=0.20.0",
    "redis>=7.1.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.14.9",
]

[tool.ruff.lint]
extend-select = ["I"]
